--- a/server/index.html
+++ b/server/index.html
@@ -13,7 +13,7 @@
         'use strict';
         $(document).ready(function() {
             const socket = io.connect('http://localhost:4000');
-            socket.emit('start');
+            // socket.emit('start');
             socket.on('ticker', function(response) {
                 const res = Array.isArray(response) ? response : [response];
                 const json = res.map(item => JSON.stringify(item)).join('\n');
